@@ -5,8 +5,19 @@ A Quickstart-Example for PaxExam on Wildfly 8.1.0.CR1
 
 this quickstart example  could be a template for in-container testing on wildfly
 
-Attention !!! 
 
-this version curently has some bugs and connot be used as template 
+For Eclipse Users: 
+If you start Junit-Tests directly from the eclipse-IDE, you will get an OutOfMemmory Error !
 
-you can run all tests from maven, but if you run a single test from eclipse, then the result we be an OutOfMemory Error ! 
+There are 2 workarounds for this Problem: 
+    	
+Workaround 1:  install the junitLauncher-plugin 
+			this plugin allows you, to define default (Xmx and XX:MaxPermSize) arguments for all JunitTests
+			 
+			 http://junitlaunchfixer.googlecode.com/svn/trunk/JUnitLaunchFixer-update-site/.
+			 
+Workaround 2:Edit the Run-Configuration:   
+    	   Write into the Field (x)Arguments.VM arguments '-XX:MaxPermSize=256m'
+    	   
+    	   
+    	 
